<resources>
    <string name="app_name">Order Food</string>
    <string name="hello_world">Hello World</string>
    <string name="send">Send</string>
    <string name="email_body">This is Email body</string>
    <string name="toAddr">rajasinghsamuelb@karunya.edu.in</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="register">Register</string>
    <string name="enter_otp">"Enter OTP "</string>
    <string name="enter_pass">Enter Password</string>
    <string name="login">Login</string>
    <string name="burger_rs_100">Burger @ Rs.100</string>
    <string name="fried_rice_rs_110">Fried Rice @ Rs.110</string>
    <string name="veg_noodles_rs_50">Veg Noodles @ Rs.50</string>
    <string name="egg_noodles_rs_60">Egg Noodles @ Rs.60</string>
    <string name="veg_briyani_rs_80">Veg Briyani @ Rs.80</string>
    <string name="chicken_briyani_rs_100">Chicken Briyani @ Rs.100</string>
    <string name="place_order">Place Order</string>
    <string name="order_your_food">Order Your Food</string>
    <string name="myMail">rajasinghsamuelb@karunya.edu.in</string>
    <string name="mailPassword">ctgpbbqrhthgyayg</string>
    <string name="sam">Sam</string>
    <string name="get_bill">Get Bill</string>
    <string name="getting_bill">Getting Bill ...</string>
    <string name="name">Sam</string>
</resources>